update navbar and fixed logo section alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a.active{
+    border-bottom: 3px solid yellow;
+}
